loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:12: error: missing parameter type
  if(x=>3)
     ^